# content_generator

./: .gitignore  alembic.ini  alembic.md  config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml
db/: __init__.py  core.py
functions/: __init__.py  article_function_v1.py  article_function_v2.py  google_urls.py  scraper.py
migrations/versions/: f611a5eb81f0_initialize_project.py
models/: __init__.py  register_key.py  user.py
painless/dependencies/: __init__.py  get_db.py  get_key.py
routers/: __init__.py  article.py  users.py
schemas/: schemas.py
settings/: base.py
templates/: article.html
